# prc2025dspy

./: .env.example  .gitignore  DATA.md  README.md  batch_testing.ipynb  groq_api.py  pyproject.toml
src/: dspy_process.ipynb  dspy_train.ipynb  dspy_train_old.ipynb  preprocess.ipynb  preprocess_v2.ipynb  preprocess_v3.ipynb
