[project]
name = "prc2025dspy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "dspy",
    "groq>=0.36.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=15.0.0",
]

[tool.uv.sources]
dspy = { git = "https://github.com/rayanehmi/dspy.git", rev = "feat/groq_async_batching" }
